# LiFE

./: CMakeLists.txt  Doxyfile  LISEZMOI  README.md
src/: colors.c  colors.h  complex.c  complex.h  complexFractals.c  complexFractals.h  engine.c  engine.h  main.c  mainloop.c  mainloop.h  newton.c  newton.h  recursiveFractals.c  recursiveFractals.h
